# GraphicEngine

./: CMakeLists.txt
include/: mesh.h  model.h  shader_utils.h
res/models/: model.mtl
res/shaders/: model.frag  model.vert
src/: main.cpp  mesh.cpp  model.cpp  shader_utils.cpp
